progress, not working yet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input id="color_input" type="color" />
+    <div id="container">
+      <p>Select color:</p>
+      <input id="color_wheel" type="color" />
+      <div id="colorbox"></div>
+      <p id="hex"></p>
+      <p id="rgb"></p>
+      <p id="hsl"></p>
+    </div>
 
     <script src="script.js"></script>
   </body>
