--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <p>Select color:</p>
       <input id="color_wheel" type="color" />
       <div id="colorbox"></div>
-      <p id="hex"></p>
-      <p id="rgb"></p>
-      <p id="hsl"></p>
+      <label>Hex:</label><input type="text" name="hex" id="hex" /> <label>rgb:</label><input type="text" name="rgb" id="rgb" /> <label>hsl:</label><input type="text" name="hsl" id="hsl" />
     </div>
 
     <script src="script.js"></script>
