only base working

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
       <label>Select color:</label>
       <input id="color_wheel" type="color" />
 
+      <!-- <div id="buttons_container">
+        <button id="analogues">Analogues</button>
+        <button id="monochromatic">Monochromatic</button>
+        <button id="triad">Triad</button>
+        <button id="complementary">Complementary</button>
+        <button id="compound">Compound</button>
+        <button id="shades">Shades</button>
+      </div> -->
+
       <div id="filters_container">
-        <input type="checkbox" name="analogue" /><label>Analogues</label> <input type="checkbox" name="monochromatic" /><label>Monochromatic</label> <input type="checkbox" name="triad" /><label>Triad</label>
+        <input type="checkbox" name="analogue" id="analogues" /><label>Analogues</label> <input type="checkbox" name="monochromatic" /><label>Monochromatic</label> <input type="checkbox" name="triad" /><label>Triad</label>
         <input type="checkbox" name="complementary" /><label>Complementary</label> <input type="checkbox" name="compound" /><label>Compound</label> <input type="checkbox" name="shades" /><label>Shades</label>
       </div>
+
       <div id="boxes_container">
         <div class="box_container">
           <div id="colorbox1" class="colorbox"></div>
